adaptive property is finished

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -9,5 +9,8 @@ html(lang="ru")
 	body
 		include components/header
 
+		h2.title Title
+		p.text Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti numquam omnis molestias, ipsa tempora doloremque, tenetur expedita adipisci repellat harum itaque et quaerat repudiandae, dolores cum vitae. Possimus, quod nisi aperiam nemo delectus ea eligendi, asperiores adipisci sunt, aliquid aliquam dolorum saepe reiciendis! Enim ad quisquam ea ipsam dolore est! Temporibus tenetur est rerum at molestias aliquid voluptatibus id perferendis? Quidem sint quaerat, deserunt est, eos dolores, debitis maxime totam similique ducimus architecto? Alias atque perferendis qui et vero cum iste reprehenderit. Ut at, fuga libero asperiores quasi molestias repellendus temporibus quisquam ullam sint! Repudiandae aperiam placeat eius impedit repellendus?
+		
 		include components/footer
 		script(src='js/app.min.js')
